src/parser/snapshots/rbx_rsml__parser__tests__derive_with_missing_close.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        StringSingle(
                            "./tokens",
                        ),
                        18,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        with_clause: Some(
            DeriveWithClause {
                keyword: Node {
                    token: SpannedToken(
                        19,
                        WithDeclaration,
                        24,
                    ),
                    leading_trivia: None,
                },
                items: Some(
                    List(
                        Delimited {
                            left: Node {
                                token: SpannedToken(
                                    25,
                                    ScopeOpen,
                                    26,
                                ),
                                leading_trivia: None,
                            },
                            content: Some(
                                [
                                    DeriveWithItem {
                                        name: Node {
                                            token: SpannedToken(
                                                27,
                                                Identifier(
                                                    "A",
                                                ),
                                                28,
                                            ),
                                            leading_trivia: None,
                                        },
                                        trailing_comma: Some(
                                            Node {
                                                token: SpannedToken(
                                                    28,
                                                    Comma,
                                                    29,
                                                ),
                                                leading_trivia: None,
                                            },
                                        ),
                                    },
                                    DeriveWithItem {
                                        name: Node {
                                            token: SpannedToken(
                                                30,
                                                Identifier(
                                                    "B",
                                                ),
                                                31,
                                            ),
                                            leading_trivia: None,
                                        },
                                        trailing_comma: None,
                                    },
                                ],
                            ),
                            right: None,
                        },
                    ),
                ),
            },
        ),
        terminator: None,
    },
]
