src/parser/snapshots/rbx_rsml__parser__tests__derive_with_missing_items.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Derive {
        declaration: Node {
            token: SpannedToken(
                0,
                DeriveDeclaration,
                7,
            ),
            leading_trivia: None,
        },
        body: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        8,
                        StringSingle(
                            "./tokens",
                        ),
                        18,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        with_clause: Some(
            DeriveWithClause {
                keyword: Node {
                    token: SpannedToken(
                        19,
                        WithDeclaration,
                        24,
                    ),
                    leading_trivia: None,
                },
                items: None,
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    24,
                    SemiColon,
                    25,
                ),
                leading_trivia: None,
            },
        ),
    },
]
