src/parser/snapshots/rbx_rsml__parser__tests__directive_after_code.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                0,
                Identifier(
                    "Size",
                ),
                4,
            ),
            leading_trivia: None,
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    5,
                    Equals,
                    6,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        7,
                        Number(
                            "1",
                        ),
                        8,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    8,
                    SemiColon,
                    9,
                ),
                leading_trivia: None,
            },
        ),
    },
    Assignment {
        pub_modifier: None,
        left: Node {
            token: SpannedToken(
                24,
                Identifier(
                    "Size",
                ),
                28,
            ),
            leading_trivia: Some(
                [
                    SpannedToken(
                        10,
                        Directive(
                            "nobuiltins",
                        ),
                        23,
                    ),
                ],
            ),
        },
        middle: Some(
            Node {
                token: SpannedToken(
                    29,
                    Equals,
                    30,
                ),
                leading_trivia: None,
            },
        ),
        right: Some(
            Node {
                node: Node {
                    token: SpannedToken(
                        31,
                        Number(
                            "2",
                        ),
                        32,
                    ),
                    leading_trivia: None,
                },
            },
        ),
        terminator: Some(
            Node {
                token: SpannedToken(
                    32,
                    SemiColon,
                    33,
                ),
                leading_trivia: None,
            },
        ),
    },
]
