src/parser/snapshots/rbx_rsml__parser__tests__directive_static_alone.snap
---
source: src/parser/mod.rs
expression: parsed.ast
---
[
    None {
        node: Node {
            token: SpannedToken(
                0,
                None,
                0,
            ),
            leading_trivia: Some(
                [
                    SpannedToken(
                        0,
                        Directive(
                            "static",
                        ),
                        9,
                    ),
                ],
            ),
        },
    },
]
